--- a/src/main/webapp/resources/pages/index.html
+++ b/src/main/webapp/resources/pages/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Bootstrap Admin Theme</title>
+    <title>数据分析结果</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -57,7 +57,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">SB Admin v2.0</a>
+                <a class="navbar-brand" href="index.html">数据分析结果</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -286,90 +286,19 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> 数据展示</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="flot.html">Flot Charts</a>
-                                </li>
-                                <li>
-                                    <a href="morris.html">Morris.js Charts</a>
-                                </li>
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
-                        <li>
-                            <a href="tables.html"><i class="fa fa-table fa-fw"></i> Tables</a>
-                        </li>
-                        <li>
-                            <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="panels-wells.html">Panels and Wells</a>
-                                </li>
-                                <li>
-                                    <a href="buttons.html">Buttons</a>
-                                </li>
-                                <li>
-                                    <a href="notifications.html">Notifications</a>
-                                </li>
-                                <li>
-                                    <a href="typography.html">Typography</a>
-                                </li>
-                                <li>
-                                    <a href="icons.html"> Icons</a>
-                                </li>
-                                <li>
-                                    <a href="grid.html">Grid</a>
-                                </li>
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="#">Second Level Item</a>
-                                </li>
-                                <li>
-                                    <a href="#">Second Level Item</a>
-                                </li>
-                                <li>
-                                    <a href="#">Third Level <span class="fa arrow"></span></a>
-                                    <ul class="nav nav-third-level">
-                                        <li>
-                                            <a href="#">Third Level Item</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Third Level Item</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Third Level Item</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Third Level Item</a>
-                                        </li>
-                                    </ul>
-                                    <!-- /.nav-third-level -->
-                                </li>
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="blank.html">Blank Page</a>
-                                </li>
-                                <li>
-                                    <a href="login.html">Login Page</a>
-                                </li>
-                            </ul>
+                            <a href="dataanalysis.html"><i class="fa fa-bar-chart-o fa-fw"></i> 数据分析</a>
+                            <!--<span class="fa arrow"></span>-->
+                            <!--<ul class="nav nav-second-level">-->
+                                <!--<li>-->
+                                    <!--<a href="flot.html">Flot Charts</a>-->
+                                <!--</li>-->
+                                <!--<li>-->
+                                    <!--<a href="morris.html">Morris.js Charts</a>-->
+                                <!--</li>-->
+                            <!--</ul>-->
                             <!-- /.nav-second-level -->
                         </li>
                     </ul>
@@ -482,7 +411,7 @@
                 <div class="col-lg-8">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Area Chart
+                            <i class="fa fa-bar-chart-o fa-fw"></i> 订单量分布
                             <div class="pull-right">
                                 <div class="btn-group">
                                     <!--<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" id="companyChoose">-->
@@ -559,7 +488,7 @@
                     <!-- /.panel -->
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-clock-o fa-fw"></i> Responsive Timeline
+                            <i class="fa fa-clock-o fa-fw"></i> 时间分布
                             <select class="btn btn-default btn-xs dropdown-toggle" style="float: right;" id="companyChoose2">
                                 <option value ="1">京东白条</option>
                                 <option value ="2">易宝支付</option>
@@ -680,56 +609,56 @@
                 <div class="col-lg-4">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bell fa-fw"></i> Notifications Panel
+                            <i class="fa fa-bell fa-fw"></i> 排行榜
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <div class="list-group">
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-comment fa-fw"></i> New Comment
+                                    <!--<i class="fa fa-comment fa-fw"></i>--><span id="list1">企鹅</span>
                                     <span class="pull-right text-muted small"><em>4 minutes ago</em>
                                     </span>
                                 </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-                                    <span class="pull-right text-muted small"><em>12 minutes ago</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-envelope fa-fw"></i> Message Sent
-                                    <span class="pull-right text-muted small"><em>27 minutes ago</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-tasks fa-fw"></i> New Task
-                                    <span class="pull-right text-muted small"><em>43 minutes ago</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-upload fa-fw"></i> Server Rebooted
-                                    <span class="pull-right text-muted small"><em>11:32 AM</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-bolt fa-fw"></i> Server Crashed!
-                                    <span class="pull-right text-muted small"><em>11:13 AM</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-warning fa-fw"></i> Server Not Responding
-                                    <span class="pull-right text-muted small"><em>10:57 AM</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-shopping-cart fa-fw"></i> New Order Placed
-                                    <span class="pull-right text-muted small"><em>9:49 AM</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-money fa-fw"></i> Payment Received
-                                    <span class="pull-right text-muted small"><em>Yesterday</em>
-                                    </span>
-                                </a>
+                                <!--<a href="#" class="list-group-item">-->
+                                    <!--<i class="fa fa-twitter fa-fw"></i> 3 New Followers-->
+                                    <!--<span class="pull-right text-muted small"><em>12 minutes ago</em>-->
+                                    <!--</span>-->
+                                <!--</a>-->
+                                <!--<a href="#" class="list-group-item">-->
+                                    <!--<i class="fa fa-envelope fa-fw"></i> Message Sent-->
+                                    <!--<span class="pull-right text-muted small"><em>27 minutes ago</em>-->
+                                    <!--</span>-->
+                                <!--</a>-->
+                                <!--<a href="#" class="list-group-item">-->
+                                    <!--<i class="fa fa-tasks fa-fw"></i> New Task-->
+                                    <!--<span class="pull-right text-muted small"><em>43 minutes ago</em>-->
+                                    <!--</span>-->
+                                <!--</a>-->
+                                <!--<a href="#" class="list-group-item">-->
+                                    <!--<i class="fa fa-upload fa-fw"></i> Server Rebooted-->
+                                    <!--<span class="pull-right text-muted small"><em>11:32 AM</em>-->
+                                    <!--</span>-->
+                                <!--</a>-->
+                                <!--<a href="#" class="list-group-item">-->
+                                    <!--<i class="fa fa-bolt fa-fw"></i> Server Crashed!-->
+                                    <!--<span class="pull-right text-muted small"><em>11:13 AM</em>-->
+                                    <!--</span>-->
+                                <!--</a>-->
+                                <!--<a href="#" class="list-group-item">-->
+                                    <!--<i class="fa fa-warning fa-fw"></i> Server Not Responding-->
+                                    <!--<span class="pull-right text-muted small"><em>10:57 AM</em>-->
+                                    <!--</span>-->
+                                <!--</a>-->
+                                <!--<a href="#" class="list-group-item">-->
+                                    <!--<i class="fa fa-shopping-cart fa-fw"></i> New Order Placed-->
+                                    <!--<span class="pull-right text-muted small"><em>9:49 AM</em>-->
+                                    <!--</span>-->
+                                <!--</a>-->
+                                <!--<a href="#" class="list-group-item">-->
+                                    <!--<i class="fa fa-money fa-fw"></i> Payment Received-->
+                                    <!--<span class="pull-right text-muted small"><em>Yesterday</em>-->
+                                    <!--</span>-->
+                                <!--</a>-->
                             </div>
                             <!-- /.list-group -->
                             <a href="#" class="btn btn-default btn-block">View All Alerts</a>
@@ -875,6 +804,9 @@
 
     </div>
     <!-- /#wrapper -->
+
+    <!--排行榜 js-->
+    <script type="text/javascript" src="../js/ranklistJS.js"></script>
 
     <!--销量分布js-->
     <script type="text/javascript" src="../js/provincesJS.js"></script>
