联系图与排行榜加入

--- a/src/main/webapp/resources/pages/index.html
+++ b/src/main/webapp/resources/pages/index.html
@@ -332,7 +332,7 @@
                         </div>
                         <a href="#">
                             <div class="panel-footer">
-                                <span class="pull-left">View Details</span>
+                                <span class="pull-left">京东</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                                 <div class="clearfix"></div>
                             </div>
@@ -354,7 +354,7 @@
                         </div>
                         <a href="#">
                             <div class="panel-footer">
-                                <span class="pull-left">View Details</span>
+                                <span class="pull-left">易宝支付</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                                 <div class="clearfix"></div>
                             </div>
@@ -376,7 +376,7 @@
                         </div>
                         <a href="#">
                             <div class="panel-footer">
-                                <span class="pull-left">View Details</span>
+                                <span class="pull-left">联动优势</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                                 <div class="clearfix"></div>
                             </div>
@@ -398,7 +398,7 @@
                         </div>
                         <a href="#">
                             <div class="panel-footer">
-                                <span class="pull-left">View Details</span>
+                                <span class="pull-left">财付通</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                                 <div class="clearfix"></div>
                             </div>
@@ -613,12 +613,12 @@
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <div class="list-group">
-                                <a href="#" class="list-group-item">
-                                    <!--<i class="fa fa-comment fa-fw"></i>--><span id="list1">企鹅</span>
-                                    <span class="pull-right text-muted small"><em>4 minutes ago</em>
-                                    </span>
-                                </a>
+                            <div class="list-group" id="rankLists">
+                                <!--<a href="#" class="list-group-item">-->
+                                    <!--&lt;!&ndash;<i class="fa fa-comment fa-fw"></i>&ndash;&gt;<span id="list1" style="width: 50%;"></span>-->
+                                    <!--<span class="pull-right text-muted small"><em>4 minutes ago</em>-->
+                                    <!--</span>-->
+                                <!--</a>-->
                                 <!--<a href="#" class="list-group-item">-->
                                     <!--<i class="fa fa-twitter fa-fw"></i> 3 New Followers-->
                                     <!--<span class="pull-right text-muted small"><em>12 minutes ago</em>-->
@@ -661,7 +661,7 @@
                                 <!--</a>-->
                             </div>
                             <!-- /.list-group -->
-                            <a href="#" class="btn btn-default btn-block">View All Alerts</a>
+                            <!--<a href="#" class="btn btn-default btn-block">View All Alerts</a>-->
                         </div>
                         <!-- /.panel-body -->
                     </div>
